--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/linearLayout5"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".SplashActivity"
-    android:background="@drawable/back">
+    android:background="@drawable/back"
+    tools:context=".SplashActivity">
 
   <!--  <VideoView
         android:id="@+id/splash"
@@ -15,22 +15,28 @@
         />-->
 
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:paddingTop="200dp" />
+  <TextView
+      android:id="@+id/textView"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:paddingTop="200dp"
+      app:layout_constraintEnd_toEndOf="parent"
+      app:layout_constraintStart_toStartOf="parent"
+      app:layout_constraintTop_toTopOf="parent" />
 
 
-    <TextView
-        android:drawableTop="@drawable/ic_karaoke"
-        android:id="@+id/intro"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/scdream2"
-        android:gravity="center_horizontal"
-        android:text="씽씽 \n Seeing Sing"
-        android:textSize="30dp"
-        android:textColor="@color/white"/>
+  <TextView
+      android:id="@+id/intro"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:drawableTop="@drawable/ic_karaoke"
+      android:fontFamily="@font/scdream2"
+      android:gravity="center_horizontal"
+      android:text="씽씽 \n Seeing Sing"
+      android:textColor="@color/white"
+      android:textSize="30dp"
+      app:layout_constraintEnd_toStartOf="@+id/textView"
+      app:layout_constraintStart_toStartOf="@+id/textView"
+      app:layout_constraintTop_toBottomOf="@+id/textView" />
 
-</LinearLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
