--- a/app/src/main/res/layout/activity_part_practice_plane1.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane1.xml
@@ -8,13 +8,12 @@
     android:background="@drawable/back"
     android:orientation="vertical">
 
-
     <ImageView
-        android:id="@+id/planefourthscore"
+        android:id="@+id/planefirstscore"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
-        android:src="@drawable/planefourthscore"
+        android:src="@drawable/planefirstscore"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +25,7 @@
         android:layout_marginStart="7dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="우"
+        android:text="떴"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -41,13 +40,13 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="리"
+        android:text="다"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
         app:layout_constraintStart_toEndOf="@+id/pitchButton1"
-        app:layout_constraintTop_toBottomOf="@+id/planefourthscore" />
+        app:layout_constraintTop_toBottomOf="@+id/planefirstscore" />
 
     <Button
         android:id="@+id/pitchbutton3"
@@ -56,6 +55,7 @@
         android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
+        android:text="떴"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -69,12 +69,13 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
+        android:text="다"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pitchbutton3"
-        app:layout_constraintTop_toBottomOf="@+id/planefourthscore" />
+        app:layout_constraintTop_toBottomOf="@+id/planefirstscore" />
 
     <Button
         android:id="@+id/pitchbutton5"
@@ -83,6 +84,7 @@
         android:layout_marginStart="7dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
+        android:text="비"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -97,7 +99,7 @@
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="비"
+        android:text="행"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -112,7 +114,7 @@
         android:layout_marginEnd="4dp"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="행"
+        android:text="기"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -120,18 +122,22 @@
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton8"
         app:layout_constraintStart_toEndOf="@+id/pitchbutton6" />
 
+
     <Button
         android:id="@+id/pitchbutton8"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
-        android:text="기"
+        android:text=""
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/pitchbutton7"
         app:layout_constraintTop_toBottomOf="@+id/pitchbutton4" />
+
+
+
 
     <TextView
         android:id="@+id/pitchTextView"
@@ -179,5 +185,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.502"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageButton
+        android:id="@+id/next"
+        android:layout_width="52dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="23dp"
+        android:layout_marginEnd="24dp"
+        android:layout_marginBottom="200dp"
+        android:background="@android:drawable/divider_horizontal_dark"
+        android:onClick="onClick_next"
+        android:scaleType="fitCenter"
+        android:tint="#9C27B0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
+        app:layout_constraintTop_toBottomOf="@+id/firstmusicscore"
+        app:layout_constraintVertical_bias="0.768"
+        app:srcCompat="@android:drawable/ic_media_next" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
