--- a/app/src/main/res/layout/activity_part_practice_plane3.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane3.xml
@@ -56,9 +56,9 @@
         android:id="@+id/pitchbutton4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="이"
         android:background="?selectableItemBackground"
         android:fontFamily="@font/scdream2"
+        android:text="이"
         android:textColor="@color/white"
         android:textSize="20dp"
         android:theme="@style/AppTheme.BlueRipple"
@@ -71,7 +71,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:scaleType="centerInside"
-        android:src="@drawable/thirdscore"
+        android:src="@drawable/third_plane"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton3"
         app:layout_constraintTop_toTopOf="parent" />
@@ -185,10 +185,10 @@
 
     <ImageButton
         android:id="@+id/next"
-        android:layout_width="52dp"
+        android:layout_width="50dp"
         android:layout_height="49dp"
         android:layout_marginStart="23dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="30dp"
         android:layout_marginBottom="200dp"
         android:background="@android:drawable/divider_horizontal_dark"
         android:onClick="onClick_next"
@@ -196,11 +196,32 @@
         android:tint="#9C27B0"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.384"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toEndOf="@+id/last"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton8"
         app:layout_constraintTop_toBottomOf="@+id/firstmusicscore"
-        app:layout_constraintVertical_bias="0.795"
+        app:layout_constraintVertical_bias="0.768"
         app:srcCompat="@android:drawable/ic_media_next" />
+
+    <ImageButton
+        android:id="@+id/last"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp"
+        android:layout_marginBottom="200dp"
+        android:background="@android:drawable/divider_horizontal_dark"
+        android:onClick="onClick_last"
+        android:scaleType="fitCenter"
+        android:src="@android:drawable/ic_media_previous"
+        android:tint="#9C27B0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/pitchbutton5"
+        app:layout_constraintEnd_toStartOf="@+id/next"
+        app:layout_constraintHorizontal_bias="0.003"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/firstmusicscore"
+        app:layout_constraintVertical_bias="0.77" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
