--- a/app/src/main/res/layout/activity_part_practice_plane4.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane4.xml
@@ -10,6 +10,19 @@
 
 
     <Button
+        android:id="@+id/playVib"
+        android:layout_width="70dp"
+        android:layout_height="51dp"
+        android:theme="@style/AppTheme.BlueRipple"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_telephone"
+        app:layout_constraintRight_toRightOf="@+id/firstmusicscore"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintTop_toTopOf="@+id/firstmusicscore" />
+
+
+    <Button
         android:id="@+id/pitchbutton3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -187,7 +200,7 @@
         android:layout_marginStart="30dp"
         android:layout_marginEnd="30dp"
         android:layout_marginBottom="200dp"
-        android:background="@android:drawable/divider_horizontal_dark"
+        android:background="?selectableItemBackground"
         android:onClick="onClick_last"
         android:scaleType="fitCenter"
         android:src="@android:drawable/ic_media_previous"
