남/여 음역대 추가!

--- a/app/src/main/res/layout/activity_part_practice_plane3.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane3.xml
@@ -166,7 +166,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="24dp"
         android:fontFamily="@font/scdream2"
-        android:text="Too high!"
+        android:text="높아요!"
         android:textSize="30dp"
         app:layout_constraintBottom_toTopOf="@+id/pitchline"
         app:layout_constraintEnd_toEndOf="parent"
@@ -188,7 +188,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="36dp"
         android:fontFamily="@font/scdream2"
-        android:text="Too low!"
+        android:text="낮아요!"
         android:textSize="30dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
