--- a/app/src/main/res/layout/activity_part_practice_plane1.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane1.xml
@@ -8,7 +8,6 @@
     android:background="@drawable/back"
     android:orientation="vertical">
 
-
     <Button
         android:id="@+id/playVib"
         android:layout_width="70dp"
@@ -21,6 +20,16 @@
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintTop_toTopOf="@+id/planefirstscore" />
 
+    <Button
+        android:id="@+id/backtochoice"
+        android:layout_width="70dp"
+        android:layout_height="51dp"
+        android:background="?selectableItemBackground"
+        android:drawableLeft="@drawable/ic_baseline_arrow_back_24"
+        android:theme="@style/AppTheme.BlueRipple"
+        app:layout_constraintHorizontal_chainStyle="packed"
+        app:layout_constraintLeft_toLeftOf="@+id/planefirstscore"
+        app:layout_constraintTop_toTopOf="@+id/planefirstscore" />
 
 
     <ImageView
