곡선택 화면으로 이동버튼 추가 (비행기)

--- a/app/src/main/res/layout/activity_part_practice_plane1.xml
+++ b/app/src/main/res/layout/activity_part_practice_plane1.xml
@@ -39,6 +39,7 @@
         android:scaleType="centerInside"
         android:src="@drawable/planefirstscore"
         app:layout_constraintEnd_toStartOf="@+id/pitchbutton3"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="@+id/pitchbutton3"
         app:layout_constraintTop_toTopOf="parent" />
 
